--- a/index.html
+++ b/index.html
@@ -103,6 +103,22 @@
           </div>
         </div>
       </div>
+      <div class="our-work text-center pt-5 pb-5">
+        <div class="container">
+          <div class="main-title mt-5 mb-5 position-relative">
+            <img class="mb-4" src="imgs/title.png" alt="">
+            <h2>We Make This</h2>
+            <p class="text-black-50 text-uppercase">Prepare to be Amazed</p>
+            <ul class="list-unstyled d-flex justify-content-center mt-5 mb-5">
+              <li class="active">All</li>
+              <li>Design</li>
+              <li>Code</li>
+              <li>Photo</li>
+              <li>App</li>
+            </ul>
+          </div>
+        </div>
+      </div>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/all.min.js"></script>
     </body>
