--- a/index.html
+++ b/index.html
@@ -110,13 +110,58 @@
             <h2>We Make This</h2>
             <p class="text-black-50 text-uppercase">Prepare to be Amazed</p>
             <ul class="list-unstyled d-flex justify-content-center mt-5 mb-5">
-              <li class="active">All</li>
+              <li class="active rounded-pill">All</li>
               <li>Design</li>
               <li>Code</li>
               <li>Photo</li>
               <li>App</li>
             </ul>
           </div>
+            <div class="row">
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-01.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-02.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-03.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-04.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-05.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-06.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-07.jpg" alt="">
+                </div>
+              </div>
+              <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="box mb-3 bg-white" data-work="Application">
+                  <img class="img-fluid" src="imgs/work-08.jpg" alt="">
+                </div>
+              </div>
+            </div>
+            <div class="d-flex justify-content-center mt-5">
+              <a class="btn btn-main rounded-pill text-uppercase" href="#">i want more...</a>
+            </div>
         </div>
       </div>
       <script src="js/bootstrap.bundle.min.js"></script>
