Added Team Section

--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
         </div>
       </nav>
       <div class="landing d-flex justify-content-center align-items-center">
-        <dir class="text-center text-light">
+        <div class="text-center text-light">
           <h1 class="fw-normal">Text the Creativity</h1>
           <p class="fs-6 text-white-50 mb-5">We make awesome praphic and we design</p>
           <a class="btn btn-main rounded-pill" href="#">Get Started</a>
-        </dir>
+        </div>
       </div>
       <div class="features">
         <div class="container pt-5 pb-5 text-center">
@@ -163,6 +163,44 @@
               <a class="btn btn-main rounded-pill text-uppercase" href="#">i want more...</a>
             </div>
         </div>
+      </div>
+      <div class="stuff">
+        <div class="container">
+          <div class="main-title text-center mt-5 mb-5 position-relative">
+            <img class="mb-4" src="imgs/title.png" alt="">
+            <h2>Some Stuff About Us</h2>
+            <p class="text-black-50 text-uppercase">The Great Team</p>
+          </div>
+          <p class="description text-center mb-5 text-black-50 m-auto ">
+            Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+            Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.
+          </p>
+          <div class="row">
+            <div class="col-lg-4 mb-4 text-center text-md-start">
+              <div class="text text-center">
+                <h4>Retina Design</h4>
+                <p class="text-black-50 fs-6 text-start">
+                  Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Mauris blandit aliquet elit, eget
+                  tincidunt nibh pulvinar a.
+                </p>
+                <p class="text-black-50 fs-6 text-start">
+                  Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                  Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie
+                  malesuada.
+                </p>
+                <a class="btn btn-main rounded-pill text-uppercase m-auto" href="#">order me one</a>
+              </div>
+            </div>
+            <div class="col-lg-8">
+              <div class="img">
+                <img class="img-fluid" src="imgs/laptop.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="team">
+        
       </div>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/all.min.js"></script>
