--- a/index.html
+++ b/index.html
@@ -199,8 +199,21 @@
           </div>
         </div>
       </div>
-      <div class="team">
-        
+      <div class="team text-center pt-5 pb-5">
+        <div class="container pt-5 pb-5">
+          <div class="text">
+            <h2 class="fw-bold">Meet The Team</h2>
+            <p class="text-black-50 mb-5">
+              Donec rutrum congue leo eget malesuada. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+              Pellentesque in ipsum id orci porta dapibus. Proin eget tortor risus. Donec sollicitudin molestie malesuada.
+            </p>
+            <div class="row">
+              <div class="col-lg-3 col-md-6">
+                <div class="box bg-white"></div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/all.min.js"></script>
