--- a/index.html
+++ b/index.html
@@ -209,10 +209,109 @@
             </p>
             <div class="row">
               <div class="col-lg-3 col-md-6">
-                <div class="box bg-white"></div>
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-1.png" alt="">
+                  <h4 class="p-2 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-2 ">“I don't understand how we got by those troops. I thought we were dead.“</blockquote>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-2.png" alt="">
+                  <h4 class="p-2 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-2 ">“I don't understand how we got by those troops. I thought we were dead.“</blockquote>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-3.png" alt="">
+                  <h4 class="p-2 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-2 ">“I don't understand how we got by those troops. I thought we were dead.“</blockquote>
+                </div>
+              </div>
+              <div class="col-lg-3 col-md-6">
+                <div class="box bg-white">
+                  <img class="img-fluid" src="imgs/team-4.png" alt="">
+                  <h4 class="p-2 text-light">Luke Skywalker</h4>
+                  <blockquote class="text-black-50 p-2 ">“I don't understand how we got by those troops. I thought we were dead.“</blockquote>
+                </div>
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="techs pt-5 pb-5">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-sm-6 col-md-4 col-lg-2">
+              <img class="img-fluid" src="imgs/tech-1.png" alt="">
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+              <img class="img-fluid" src="imgs/tech-2.png" alt="">
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+              <img class="img-fluid" src="imgs/tech-3.png" alt="">
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+              <img class="img-fluid" src="imgs/tech-4.png" alt="">
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+              <img class="img-fluid" src="imgs/tech-1.png" alt="">
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-2">
+              <img class="img-fluid" src="imgs/tech-2.png" alt="">
+            </div>
+            </div>
+          </div>
+        </div>
+      <div class="project pt-5 pb-5">
+        <div class="container text-center">
+          <h3 class="text-light">Start You Project Now</h3>
+          <p class="text-white-50">Leave your description and we start the engine.Don't worry,you can cancel anytime</p>
+          <div class=" mt-5">
+            <a class="btn btn-main rounded-pill text-uppercase" href="#">i want more...</a>
+          </div>
+        </div>
+      </div>
+      <div class="blog pt-5 pb-5">
+        <div class="container">
+            <div class="main-title text-center mt-5 mb-5 position-relative">
+              <img class="mb-4" src="imgs/title.png" alt="">
+              <h2>Read Our Blog</h2>
+              <p class="text-black-50 text-uppercase">New Stories</p>
+            </div>
+            <div class="row">
+              <div class="col-lg-4 col-md-6">
+                <div class="card mb-4 bg-white">
+                  <img class="card-img-top" src="imgs/blog-1.jpg" alt="">
+                  <div class="card-body">
+                    <span class="text-black-50">Jan 17, 2022</span>
+                    <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6">
+                <div class="card mb-4">
+                  <img class="card-img-top" src="imgs/blog-2.jpg" alt="">
+                  <div class="card-body">
+                    <span class="text-black-50">Jan 17, 2022</span>
+                    <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="col-lg-4 col-md-6 mb-3">
+                <div class="card mb-4 bg-white">
+                  <img class="card-img-top" src="imgs/blog-3.jpg" alt="">
+                  <div class="card-body">
+                    <span class="text-black-50">Jan 17, 2022</span>
+                    <h5 class="card-title">Some Awesome Blog Title Here</h5>
+                  </div>
+                </div>
+              </div>
+              <div class="d-flex justify-content-center mt-5">
+                <a class="btn btn-main rounded-pill text-uppercase" href="#">i want more...</a>
+              </div>
+            </div>
         </div>
       </div>
       <script src="js/bootstrap.bundle.min.js"></script>
