Added Footer And finsh this Project

--- a/index.html
+++ b/index.html
@@ -314,6 +314,81 @@
             </div>
         </div>
       </div>
+      <div class="subscribe pt-5 pb-5 text-center text-md-start">
+        <div class="container">
+          <div class="row align-items-center">
+            <div class="col-md-6 col-lg-3">
+              <div class="fw-bold fs-5 mb-3">Subscribe to our Newsletter:</div>
+            </div>
+            <div class="col-md-6 col-lg-7 help">
+              <input placeholder="Enter Email Address" class="w-100 text-light p-2 bg-transparent" type="text" >
+            </div>
+            <div class="col-md-6 col-lg-2">
+              <input class="btn rounded-pill" type="submit" value="Subscribe">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer pb-5 pt-5">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-lg-4">
+              <div class="info text-white-50">
+                <img class="mb-4" src="imgs/logo.png" alt="">
+                <p class="fs-9 mb-5">
+                  Pellentesque in ipsum id orci porta dapibus. Vivamus magna justo, lacinia eget consectetur sed,
+                  convallis at tellus.
+                </p>
+                <div class="copyright fs-9">
+                  Created By <span>Graphberry</span>
+                  <div>&copy; 2022 - <span>Bondi Inc</span></div>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-2 text-center text-md-start">
+              <div class="links">
+                <h5 class="text-light">Links</h5>
+                <ul class="list-unstyled text-white-50 lh-lg">
+                  <li>Home</li>
+                  <li>Our Services</li>
+                  <li>Portfolio</li>
+                  <li>Testimonials</li>
+                  <li>Support</li>
+                  <li>Terms and Condition</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-md-6 col-lg-2 text-center text-md-start text-white-50">
+              <h5 class="text-light">About Us</h5>
+              <ul class="lh-lg list-unstyled">
+                <li>Sign In</li>
+                <li>Register</li>
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <h5 class="text-light">Contact Us</h5>
+              <p class="text-white-50 fs-9 mb-5">Get in touch with us via mail phone. We are Waiting for your call or message</p>
+              <a class="btn btn-main rounded-pill w-100" href="#">FathiMostafa@Gmail.com</a>
+              <ul class="d-flex mt-5 list-unstyled gap-3">
+                <li>
+                  <a class="d-block text-light" href="#"><i class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"></i></a>
+                </li>
+                <li>
+                  <a class="d-block text-light" href="#"><i class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"></i></a>
+                </li>
+                <li>
+                  <a class="d-block text-light" href="#"><i class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"></i></a>
+                </li>
+                <li>
+                  <a class="d-block text-light" href="#"><i class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"></i></a>
+                </li>
+              </ul>
+            </div>
+        </div>
+      </div>
       <script src="js/bootstrap.bundle.min.js"></script>
       <script src="js/all.min.js"></script>
     </body>
